# learn-slambook2

./: README.md
assignments/: ch1.md  ch2.md  ch3.md  ch4.md  ch5.md  ch6.md
slambook2/: .gitignore
slambook2/ch2/: CMakeLists.txt  helloSLAM.cpp  helloSLAM2.cpp  libHelloSLAM.cpp
slambook2/ch3/examples/: coordinateTransform.cpp  plotTrajectory.cpp
slambook2/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp  matrixExtractAssign.cpp
slambook2/ch3/useGeometry/: useGeometry.cpp
slambook2/ch4/: CMakeLists.txt  useSophus.cpp
slambook2/ch4/example/: trajectoryError.cpp
slambook2/ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
slambook2/ch5/rgbd/: CMakeLists.txt  joinMap.cpp
slambook2/ch5/stereo/: stereoVision.cpp
slambook2/ch6/: ceresCurveFitting.cpp  g2oCurveFitting.cpp
